@@ -45,6 +45,7 @@
     <Compile Include="Mono.Rocks\Int32.cs" />
     <Compile Include="Mono.Rocks\Int64.cs" />
     <Compile Include="Mono.Rocks\KeyValuePair.cs" />
+    <Compile Include="Mono.Rocks\Lambda.cs" />
     <Compile Include="Mono.Rocks\NaturalStringComparer.cs" />
     <Compile Include="Mono.Rocks\Sequence.cs" />
     <Compile Include="Mono.Rocks\Stream.cs" />
