@@ -1,5 +1,9 @@
 2008-08-17  Jonathan Pryor  <jpryor@novell.com>
 
+	* LambdaTest.cs: Added; tests Lambda.Func(), Lambda.Expression().
+
+2008-08-17  Jonathan Pryor  <jpryor@novell.com>
+
 	* StringTest.cs: Rename NamedCaptures to CaptureNamedGroups.
 
 2008-08-17  Jonathan Pryor  <jpryor@novell.com>
